<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quick Music Composer</string>
    <string name="menu_settings">Settings</string>
    <string name="start">Start</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_music_selection">MusicSelectionActivity</string>
    <string name="guitar">Guitar</string>
    <string name="bass">Bass</string>
    <string name="play">Play</string>
    <string name="save">Save</string>

</resources>